corrected small typos in algorithms.tex

--- a/report/algorithms/algorithms.tex
+++ b/report/algorithms/algorithms.tex
@@ -111,7 +111,7 @@ Here $\Delta_{ij} \in \Rbf^{m\times n}$ is such that $\Delta_{ij}(k,l) = \delta_
 
 \textbf{Recovering the primal solution}
 
-To recover the primal solution we can distinguish the two cases $\lambda \leq 1$ and $\lambda >1$. For the latter one, first note that $\norm{Y}{\infty}{} \leq \norm{Y}{2}{}$ for all~$Y$. To show this first recall that $c := \norm{Y}{2}{} = \max_{\norm{x}{2}{}=1} \norm{Yx}{2}{}$. This means that $c - x^TY^TYx \geq0, \,\forAll x$ or, equivalently, $cI-Y^TY \succeq 0$. Using a Schur Complement this can be written as
+To recover the primal solution we can distinguish the two cases $\lambda \leq 1$ and $\lambda >1$. For the latter one, first note that $\norm{Y}{\infty}{} \leq \norm{Y}{2}{}$ for all~$Y$. To show this first recall that $c := \norm{Y}{2}{} = \max_{\norm{x}{2}{}=1} \norm{Yx}{2}{}$. This means that $c \norm{x}{2}{2} - x^TY^TYx \geq0, \,\forAll x$ or, equivalently, $cI-Y^TY \succeq 0$. Using a Schur Complement this can be written as
 %
 \begin{align*}
 \begin{bmatrix} I & Y \\Y^T & cI \end{bmatrix} \succeq 0
@@ -162,7 +162,7 @@ Therefore it is possible to recover the optimizer $S^*$ from the dual problem: I
 \subsubsection{Using Interior Point Methods to Solve the Dual}
 \label{Algorithms:MainAlgs:IPM:Complexity:Subsubsec}
 
-Problem~\eqref{Algorithms:MainAlgs:IPM:SDPform:DualSimpler} is an SDP and can therefore in principle be solved using off-the-shelf solver packages such as \texttt{sedum}~\cite{Sturm:1999uq} and \texttt{sdpt3}~\cite{Toh:1999kx}. These solvers are based on interior point methods which offer superior convergence rates~\cite{Boyd:2004aa} but unfortunately do not scale ell at all with the size of the matrix~$M$. Figure~\ref{Algorithms:MainAlgs:IPM:Complexity:figure} shows the average running time over 10 instances of the dual problem for the solvers \texttt{sedumi} and \texttt{sdpt3} for randomly generated data of very low dimensions. 
+Problem~\eqref{Algorithms:MainAlgs:IPM:SDPform:DualSimpler} is an SDP and can therefore in principle be solved using off-the-shelf solver packages such as \texttt{sedum}~\cite{Sturm:1999uq} and \texttt{sdpt3}~\cite{Toh:1999kx}. These solvers are based on interior point methods which offer superior convergence rates~\cite{Boyd:2004aa} but unfortunately do not scale well at all with the size of the matrix~$M$. Figure~\ref{Algorithms:MainAlgs:IPM:Complexity:figure} shows the average running time over 10 instances of the dual problem for the solvers \texttt{sedumi} and \texttt{sdpt3} for randomly generated data of very low dimensions. 
 %
 \begin{figure}[htbp]
 \centering
@@ -173,14 +173,14 @@ Problem~\eqref{Algorithms:MainAlgs:IPM:SDPform:DualSimpler} is an SDP and can th
 %
 There is a surprisingly big difference in terms of the running times: \texttt{sdpt3} is consistently faster than \texttt{sedumi}, with the spread growing significantly with the problem size. For the largest dimension \texttt{sdpt3} on average is 8 times faster than \texttt{sedumi} for this particular problem type. To be able to give a realistic assessment of why this is the case would however require detailed knowledge of the solver implementation. 
 
-Regardless of which solver is used, it is obvious that, with an average running time of the faster of the two solvers of more than 2 minutes even on toy-sized problems involving matrices with only 2500 entries, interior point solvers are unsuitable for most problem of interest. The reason for this extremely bad scaling behavior with the matrix dimension is that the computation of the Newton step direction relies on second-order information of the (barrier-augmented) objective function, the computation of which is infeasible when the number of variables is very high. For applications that involve large-scale data matrices (with~$mn$ in the millions or even billions), using interior point methods therefore is essentially impossible. In order to overcome this scalability issue, a variety of first-order methods exploiting the particular structure of the Robust PCA problem have been proposed. Some of these methods will be described in the following.
+Regardless of which solver is used, it is obvious that, with an average running time of the faster of the two solvers of more than 2 minutes even on toy-sized problems involving matrices with only 2500 entries, interior point solvers are unsuitable for most problems of interest. The reason for this extremely bad scaling behavior with the matrix dimension is that the computation of the Newton step direction relies on second-order information of the (barrier-augmented) objective function, the computation of which is too expensive infeasible when the number of variables is very high. For applications that involve large-scale data matrices (with~$mn$ in the millions or even billions), using interior point methods therefore is essentially impossible. In order to overcome this scalability issue, a variety of first-order methods exploiting the particular structure of the Robust PCA problem have been proposed. Some of these methods will be described in the following.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Iterative Thresholding Method}
 \label{Algorithms:MainAlgs:ITM:Subsec}
 
-Among the first techniques used to solve~\eqref{Algorithms:Overview:RecallRPCA} for high-dimensional data was an adaptation \cite{Wright:2009fk}\footnote{note that the iterative thresholding algorithm seems to never have appeared in the published version of~\cite{Wright:2009fk}, which instead contains the accelerated proximal gradient method described in section~\ref{Algorithms:MainAlgs:PGM:Subsec}} of an iterative thresholding method originally proposed for the matrix completion problem in~\cite{Cai:2010uq}. For this method the authors of consider a relaxation of the original problem~\eqref{Algorithms:Overview:RecallRPCA} of the form 
+Among the first techniques used to solve~\eqref{Algorithms:Overview:RecallRPCA} for high-dimensional data was an adaptation \cite{Wright:2009fk}\footnote{note that the iterative thresholding algorithm seems to never have appeared in the published version of~\cite{Wright:2009fk}, which instead contains the accelerated proximal gradient method described in section~\ref{Algorithms:MainAlgs:PGM:Subsec}} of an iterative thresholding method originally proposed for the matrix completion problem in~\cite{Cai:2010uq}. For this method the authors consider a relaxation of the original problem~\eqref{Algorithms:Overview:RecallRPCA} of the form 
 %
 \begin{align}
 \begin{split}
@@ -235,9 +235,9 @@ where $Y = U\Sigma V^*$ is the SVD of~$Y$.
 Since Theorem~\ref{Algorithms:MainAlgs:ITM:SVTtheorem} is of fundamental importance to all algorithms discussed in this chapter, we give its proof here.
 %
 \begin{proof}[Proof of Theorem~\ref{Algorithms:MainAlgs:ITM:SVTtheorem}] 
-Since the objective function $f_0(X) := \argmin_X \; \norm{X}{*}{} + \frac{1}{2\tau} \norm{X-Y}{F}{2}$ is strictly convex its minimizer is unique. Recall that $Z$ is a subgradient of a convex function $f:\Rbf^{m\times n} \mapsto \Rbf$ at $X_0$ if $f(X) \geq f(X_0) + \langle Z,X-X_0\rangle$ for all~$X$. The set of all sugradients~$Z$ at $X_0$ is called the subdifferential and denoted $\partial f(X_0)$. By definition it follows that $\Xhat$ minimizes $f_0$ if and only if $0$ is as subgradient of $f_0$ at $\Xhat$. Using standard subgradient calculus this translates to $0 \in \Xhat - Y + \tau \partial ||\Xhat||_{*}$, where $\partial ||\Xhat||_{*}$ is the subdifferential of the nuclear norm at $\Xhat$. To show that $\Dcal_\tau(Y)$ satisfies~\eqref{Algorithms:MainAlgs:ITM:SVTtheore:eq} we therefore need to show that $0 \in \Dcal_\tau(Y)  - Y + \tau \partial ||\Dcal_\tau(Y) ||_{*}$.  
+Since the objective function $f_0(X) := \argmin_X \; \norm{X}{*}{} + \frac{1}{2\tau} \norm{X-Y}{F}{2}$ is strictly convex its minimizer is unique. Recall that $Z$ is a subgradient of a convex function $f:\Rbf^{m\times n} \mapsto \Rbf$ at $X_0$ if $f(X) \geq f(X_0) + \langle Z,X-X_0\rangle$ for all~$X$. The set of all sugradients~$Z$ at $X_0$ is called the subdifferential and denoted $\partial f(X_0)$. By definition it follows that $\Xhat$ minimizes $f_0$ if and only if $0$ is a subgradient of $f_0$ at $\Xhat$. Using standard subgradient calculus this translates to $0 \in \Xhat - Y + \tau \partial ||\Xhat||_{*}$, where $\partial ||\Xhat||_{*}$ is the subdifferential of the nuclear norm at $\Xhat$. To show that $\Dcal_\tau(Y)$ satisfies~\eqref{Algorithms:MainAlgs:ITM:SVTtheore:eq} we therefore need to show that $0 \in \Dcal_\tau(Y)  - Y + \tau \partial ||\Dcal_\tau(Y) ||_{*}$.  
 
-Let $X\in \Rbf^{m\times n}$ be arbitrary Let $U\Sigma V^*$ be its SVD. It can be shown that 
+Let $X\in \Rbf^{m\times n}$ be arbitrary. Let $U\Sigma V^*$ be its SVD. It can be shown that 
 \begin{align*}
 \partial ||X||_{*} = \left\{ UV^*+W \,\mid\, W\in \Rbf^{m\times n},\; U^*W =0,\; WV =0,\; \norm{W}{2}{}\leq 1 \right\}
 \end{align*}
@@ -448,7 +448,7 @@ d^* = \max_{Y} \; &\trace M^T\!Y \quad \text{subject to}\quad J(Y) \leq 1
 %
 where $J(Y) := \max\left(\norm{Y}{2}{}, \lambda^{-1}\norm{Y}{\infty}{}\right)$. Denote by $F := \{Y \mid J(Y)\leq1 \}$ the feasible set. The maximum operator in the function~$J$ implies that~$F=\{Y \mid \norm{Y}{2}{}\leq1\}\, \cap\, \{Y \mid \lambda^{-1}\norm{Y}{\infty}{}\leq1\}$, hence~$F$ is clearly convex, being the intersection of two convex sets. Further, the function~$J(Y)$ is positive and homogenous in~$Y$, hence the maximum over a linear of the objective function is achieved on the boundary~$\partial F$ of the feasible set, that is, the optimum is achieved when~$J(Y)=1$. 
 
-Top solve~\eqref{Algorithms:MainAlgs:GAD:Dual}, the authors in~\cite{Lin:2009kx} propose to use a projected gradient algorithm. The gradient of the objective function~$\trace M^T\!Y$ is simply~$M$. The projection onto the constraint set is more involved but can be treated using standard methods from convex optimization. In particular, the algorithm at each iteration~$k$ involves projecting the gradient~$M$ onto the tangent cone~$T_F(Y_k)$ of the feasible set~$F$ at the point~$Y_k$. If~$W_k$ is the steepest ascent direction obtained from this projection, the iterate can be updated using the (projected) gradient step
+To solve~\eqref{Algorithms:MainAlgs:GAD:Dual}, the authors in~\cite{Lin:2009kx} propose to use a projected gradient algorithm. The gradient of the objective function~$\trace M^T\!Y$ is simply~$M$. The projection onto the constraint set is more involved but can be treated using standard methods from convex optimization. In particular, the algorithm at each iteration~$k$ involves projecting the gradient~$M$ onto the tangent cone~$T_F(Y_k)$ of the feasible set~$F$ at the point~$Y_k$. If~$W_k$ is the steepest ascent direction obtained from this projection, the iterate can be updated using the (projected) gradient step
 %
 \begin{align}
 Y_{k+1} = \frac{Y_k+t_kW_k}{J(Y_k+t_kW_k)}
@@ -722,7 +722,7 @@ In this section we provide some simulation results to illustrate the performance
 
 The implementation of the algorithms used for the simulation are slightly modified versions of the matlab code that is freely available from \url{http://perception.csl.uiuc.edu/matrix-rank/sample_code.html}. The files are all provided with this report. 
 
-All of the numerical results that will be presented in this section have ben obtained from simulations on randomly generated data. The (square) test matrices were generated as  $M=L+S$, where the low rank component $L$ was formed as $L=L_1L_2^T$, with $L_i \in \Rbb^{n\times r}$ where $r=0.1n$ is the rank of~$L$, and each entry $(L_i)_{i,j}$ i.i.d. Gaussian with variance~$\sigma^2 =n^{-1}$. The cardinality of the support of the sparse error component~$S$ was chosen as~$0.1n$, with each non-zero entry i.i.d uniform in $[-500,500]$. For each of the selected matrix dimensions between we simulated 10 different scenarios and computed the average overall running time, the average number of iterations and the average relative errors $\|L-\Lhat\|_F / \|L\|_F$ and $\|S-\Shat\|_F / \|S\|_F$. 
+All of the numerical results that will be presented in this section have been obtained from simulations on randomly generated data. The (square) test matrices were generated as  $M=L+S$, where the low rank component $L$ was formed as $L=L_1L_2^T$, with $L_k \in \Rbb^{n\times r}$ where $r=0.1n$ is the rank of~$L$, and each entry $(L_k)_{i,j}$ i.i.d. Gaussian with variance~$\sigma^2 =n^{-1}$. The cardinality of the support of the sparse error component~$S$ was chosen as~$0.1n$, with each non-zero entry i.i.d uniform in $[-500,500]$. For each of the selected matrix dimensions we simulated 10 different scenarios and computed the average overall running time, the average number of iterations and the average relative errors $\|L-\Lhat\|_F / \|L\|_F$ and $\|S-\Shat\|_F / \|S\|_F$. 
 
 
 As can be seen from the first comparison in Figure~\ref{Algorithms:Discussion:NumComp:ALG_incDual:figure}, the Dual Projected Gradient Ascent algorithm (\texttt{dpga}) is much slower than both the Accelerated Proximal Gradient method (\texttt{apg}) and the Exact and Augmented Lagrangrian Method (\texttt{ealm}). Therefore we will exclude the Dual Projected Gradient Ascent algorithm from the following comparisons. 
